assets/css/main.css
/* ... */
.permalink .post {
    width: 540px;
    margin-bottom: 20px;
}

.post-content {
    padding-bottom: 1em;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -o-border-radius: 4px;
    border-radius: 4px;
}

.type-quote .post-content,
.type-answer .post-content {
    padding-top: 1em;
}

/* I think I'll cheat instead of resetting all the top margins... */
.type-text .post-content,
.type-chat .post-content {
    padding-top: 1px;
}

/* ===========
    The Posts
   =========== */

.post iframe {
   max-width: 100%;
}

.post-title {
    margin: 0.8125rem; /* 13px */
    line-height: 115%;
}
.link-name, .chat-title {
    font-weight: normal;
    font-size: 1.438rem; /* 23px */
}

.post-title-link:after {
    vertical-align: bottom;
    opacity: 0;

    -webkit-transition: opacity 0.2s ease-in-out;
    -moz-transition: opacity 0.2s ease-in-out;
    -o-transition: opacity 0.2s ease-in-out;
    transition: opacity 0.2s ease-in-out;
}
.post-title-link:hover:after {
    opacity: 1;
}

.post-body {
    margin: 0 1em;
}

.post-body h2 {
    font-weight: normal;
}

.post-body b,
.post-body strong {
    font-weight: 600;
}

.post-body i,
.post-body em,
.post-body cite {
    font-family: 'Lora', 'Georgia', 'Times New Roman', 'Times', serif;
}

.post-body small,
.post-body sub,
.post-body sup {
    font-weight: 300;
}

.post-body small {
    line-height: 100%;
}

.post-body small,
.post-body i,
.post-body em,
.post-body cite,
.post-body code,
.post-body pre {
    font-size: 0.6875rem; /* 11px */
}

.post-body small small,
.post-body small i,
.post-body small em,
.post-body small cite,
.post-body small code,
.post-body small pre {
    font-size: 0.5625rem; /* 9px */
}

.post-body figure {
    margin: 1em 0;
}

/* tumblr gif styles */
.tmblr-full.stretched {
    position: relative;
    left: -1em;
}

.tmblr-full.stretched img {
    width: 100%;
}

.tmblr-full.stretched .tmblr-attribution {
    margin: 0 1em;
    font-size: 0.6875rem; /* 11px */
    font-weight: 300;
}

.tmblr-full.stretched .tmblr-attribution .icon-link-ext:before {
    margin-right: 0.1875rem; /* 3px */
    vertical-align: middle;
}

/* ============
    Photo Post
   ============ */

.post-photo {
    width: 100%;
}

.post:not(.photoset-post) .post-photo,
.photoset-row:first-child.columns-1 .photo-link {
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    -o-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
}

.photoset-row:first-child:not(.columns-1) .photo-link:first-child {
    -webkit-border-top-left-radius: 4px;
    -moz-border-top-left-radius: 4px;
    -o-border-top-left-radius: 4px;
    border-top-left-radius: 4px;
}
.photoset-row:first-child:not(.columns-1) .photo-link:last-child {
    -webkit-border-top-right-radius: 4px;
    -moz-border-top-right-radius: 4px;
    -o-border-top-right-radius: 4px;
    border-top-right-radius: 4px;
}

/* ============
    Quote Post
   ============ */

.quote-container {
    padding: 0;
    border-width: 0;
    margin-top: 0;
}

.the-quote {
    margin: 0 0.8125rem 0.8125rem; /* 13px */
    line-height: 125%;
}

.quote-container.short .the-quote {
    font-size: 1.25rem; /* 20px */
}
.quote-container.medium .the-quote {
    font-size: 1rem; /* 16px */
}
.quote-container.long .the-quote {
    font-size: 0.875rem; /* 14px */
    line-height: 150%;
}

.the-quote p:first-child {
    margin-top: 0;
}

.post-body .quote-source {
    font-family: inherit;
    font-size: inherit;
    font-style: normal;
}

/* ===========
    Link Post
   =========== */

.link-container {
    display: block;
    padding: 1em 0;
    background-color: transparent;

    -webkit-transition: background-color 0.2s ease-in-out;
    -moz-transition: background-color 0.2s ease-in-out;
    -o-transition: background-color 0.2s ease-in-out;
    transition: background-color 0.2s ease-in-out;

    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    -o-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
}
.link-container.has-thumbnail {
    padding-top: 0;
}

.link-container:not(.has-thumbnail) .link-name {
    margin-top: 0;
}
.link-name:after {
    vertical-align: bottom;
    margin-left: 0.625rem; /* 10px */
}

.link-excerpt {
    margin: 0 1em;

    -webkit-transition: border-color 0.2s ease-in-out;
    -moz-transition: border-color 0.2s ease-in-out;
    -o-transition: border-color 0.2s ease-in-out;
    transition: border-color 0.2s ease-in-out;
}
.link-excerpt .the-excerpt {
    font-size: 0.75rem; /* 12px */
    font-weight: 300;
    line-height: 150%;
    margin-bottom: 0;
}

.type-link .post-body {
    border-top: 1px solid #eee;
    margin-top: 1em;
}

/* ===========
    Chat Post
   =========== */

.chat-container {
    margin-top: 0;
}

.chat-title {
    margin-bottom: 0;
}

.chat-line {
    padding: 1em;
}

.line-label {
    float: left;
    width: 20%;
    word-wrap: break-word;
}

.chat-line.has-label .line-text {
    float: left;
    width: 80%;
    padding-left: 0.3125rem; /* 5px */

    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
}

/* ============
    Audio Post
   ============ */

.type-audio {
    position: relative;
}

.album,
.index .audio-container .caption {
    display: none;
}

.audio-info {
    padding: 1em 1em 0;
    min-height: 71px;
}
.index .audio-info {
    margin-bottom: 1em;
}

.audio-info .the-info {
    vertical-align: middle;
    min-height: 71px;
    padding-left: 84px;
    opacity: 0;
}

.track-name {
    font-size: 1.063rem; /* 17px */
    font-weight: normal;
    line-height: 115%;
    margin: 0;
}

.artist {
    font-size: 0.6875rem; /* 11px */
    margin: 0.125rem 0 0; /* 2px */
}

.album-art {
    position: absolute;
    top: 1em;
    left: 1em;
    width: 71px;
    height: 71px;
}
/* ... */

